removed google dependencies

--- a/config.json
+++ b/config.json
@@ -7,12 +7,11 @@
       "App.js",
       "lib/lodash.math.js",
       "https://cdnjs.cloudflare.com/ajax/libs/async/1.22/async.min.js",
-      "https://storage.googleapis.com/versions.lumenize.com/v0.7.2/Lumenize-min.js",
       "https://rally1.rallydev.com/apps/2.0rc1/lib/analytics/analytics-all.js",
       "https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.3.1/moment.min.js",
       "https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js",
       "https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js",
-      "https://googledrive.com/host/0B3qw8lEQxbDXeWw2aFRWbWcydHc"
+      "lib/pivot-table.js"
    ],
    "css": [
       "app.css",
